# c--poc

./: .gitignore  README.md
cmake-poc/e01/: hello  hello.cpp
cmake-poc/e02/: CMakeLists.txt  Makefile  README.md  main.cpp
cmake-poc/e03/: CMakeLists.txt  README.md  main.cpp
cmake-poc/e03/include/: operations.h
cmake-poc/e03/src/: dog.cpp
cmake-poc/e04/: CMakeLists.txt  README.md  info.txt  main.cpp
cmake-poc/e04/include/: dog.h  operations.h
cmake-poc/e04/logger/include/: logger.h
cmake-poc/e04/logger/src/: logger.cpp
cmake-poc/e04/src/: operations.cpp
design-patterns/: README.md
rest-poc/: README.md
rest-poc/rest-POCO/: CMakeLists.txt  Makefile  README.md  hello.cpp  http-get-method.cpp  http-post-method.cpp
rest-poc/rest-POCO/client/: CMakeLists.txt
rest-poc/rest-POCO/client/src/: http-post-method.cpp
rest-poc/rest-POCO/server/: CMakeLists.txt
rest-poc/rest-POCO/server/src/: MyServer.cpp  MyServer.h  hello-world-server.cpp  main.cpp
rest-poc/rest-POCO/server/src/model/: UserEntity.cpp  UserEntity.h
rest-poc/rest-POCO/server/src/model/db/: DBConnectionManager.cpp  DBConnectionManager.h  main.cpp
rest-poc/rest-POCO/server/src/model/orm/: main.cpp
rest-poc/rest-POCO/server/src/model/shared/: Entity.cpp  Entity.h  IEntity.h
rest-poc/rest-POCO/server/src/router/: MyRouter.cpp  MyRouter.h
rest-poc/rest-POCO/server/src/router/resource/: AbstractResource.cpp  AbstractResource.h  Application.cpp  Application.h  ResourceException.cpp  ResourceException.h  ResourceNotFound.cpp  ResourceNotFound.h
rest-poc/rest-POCO/server/src/router/resource/factory/: ApplicationFactory.cpp  ApplicationFactory.h  Factory.cpp  Factory.h  IFactory.h
